--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body> 
+    <div class="container">
+    <h1>Ghanian Birthday Calculator</h1>
+       <img src="ghana.jpg" alt="ghana flag">
+    <form>
+
+    <!-- <p> Are you male or female?</p>
+        <input type="radio" id="female" name="gender" value="female">
+        <label for="female"> FEMALE</label> <br>
+        <input type="radio" id="male" name="gender" value="male">
+        <label for="male"> MALE</label> <br> <br>
+        <input type="submit"  value= "Submit here" name="submit">
+     </form> -->
+    
+    </div>
+
     <script 
     src="script.js">
     </script>
