--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
        <img src="ghana.jpg" alt="ghana flag">
     <form>
 
-    <!-- <p> Are you male or female?</p>
+    <p> Are you male or female?</p>
         <input type="radio" id="female" name="gender" value="female">
         <label for="female"> FEMALE</label> <br>
         <input type="radio" id="male" name="gender" value="male">
         <label for="male"> MALE</label> <br> <br>
         <input type="submit"  value= "Submit here" name="submit">
-     </form> -->
+     </form>
     
     </div>
 
