--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 <body> 
     <div class="container">
+       <div class="logo"> 
+        <img src="ghana.jpg" alt="ghana flag">
     <h1>Ghanian Birthday Calculator</h1>
-       <img src="ghana.jpg" alt="ghana flag">
-    <form>
+       </div> 
+
+    
+    <form action="script.js" method="confirm">
 
     <p> Are you male or female?</p>
         <input type="radio" id="female" name="gender" value="female">
