--- a/index.html
+++ b/index.html
@@ -14,8 +14,47 @@
         <img src="ghana.jpg" alt="ghana flag">
     <h1>Ghanian Birthday Calculator</h1>
        </div> 
+      <p> Select you Birthdate</p>
+    <form action="script.js" method="prompt">
+        <select name="date">
+            <option value="none">-</option>
+            <option value="none">1</option>
+            <option value="none">2</option>
+            <option value="none">3</option>
+            <option value="none">4</option>
+            <option value="none">5</option>
+            <option value="none">6</option>
+            <option value="none">7</option>
+            <option value="none">8</option>
+            <option value="none">9</option>
+            <option value="none">10</option>
+            <option value="none">11</option>
+            <option value="none">12</option>
+            <option value="none">13</option>
+            <option value="none">14</option>
+            <option value="none">15</option>
+            <option value="none">16</option>
+            <option value="none">17</option>
+            <option value="none">18</option>
+            <option value="none">19</option>
+            <option value="none">20</option>
+            <option value="none">21</option>
+            <option value="none">22</option>
+            <option value="none">23</option>
+            <option value="none">24</option>
+            <option value="none">25</option>
+            <option value="none">26</option>
+            <option value="none">27</option>
+            <option value="none">28</option>
+            <option value="none">29</option>
+            <option value="none">30</option>
+            <option value="none">31</option>
+            
+        </select>
+    </form>
 
-    
+
+
     <form action="script.js" method="confirm">
 
     <p> Are you male or female?</p>
