--- a/index.html
+++ b/index.html
@@ -18,43 +18,67 @@
     <form action="script.js" method="prompt">
         <select name="date">
             <option value="none">-</option>
-            <option value="none">1</option>
-            <option value="none">2</option>
-            <option value="none">3</option>
-            <option value="none">4</option>
-            <option value="none">5</option>
-            <option value="none">6</option>
-            <option value="none">7</option>
-            <option value="none">8</option>
-            <option value="none">9</option>
-            <option value="none">10</option>
-            <option value="none">11</option>
-            <option value="none">12</option>
-            <option value="none">13</option>
-            <option value="none">14</option>
-            <option value="none">15</option>
-            <option value="none">16</option>
-            <option value="none">17</option>
-            <option value="none">18</option>
-            <option value="none">19</option>
-            <option value="none">20</option>
-            <option value="none">21</option>
-            <option value="none">22</option>
-            <option value="none">23</option>
-            <option value="none">24</option>
-            <option value="none">25</option>
-            <option value="none">26</option>
-            <option value="none">27</option>
-            <option value="none">28</option>
-            <option value="none">29</option>
-            <option value="none">30</option>
-            <option value="none">31</option>
-            
+            <option value="one">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
+            <option value="17">17</option>
+            <option value="18">18</option>
+            <option value="19">19</option>
+            <option value="20">20</option>
+            <option value="21">21</option>
+            <option value="22">22</option>
+            <option value="23">23</option>
+            <option value="24">24</option>
+            <option value="25">25</option>
+            <option value="26">26</option>
+            <option value="27">27</option>
+            <option value="28">28</option>
+            <option value="29">29</option>
+            <option value="30">30</option>
+            <option value="31">31</option>
         </select>
+        <br>
+        <p> Select your Month</p>
+
+        <select name="month">
+            <option value="-">-</option>
+            <option value="Jan">Jan</option>
+            <option value="Feb">Feb</option>
+            <option value="Mar">Mar</option>
+            <option value="Apr">Apr</option>
+            <option value="May">May</option>
+            <option value="Jun">Jun</option>
+            <option value="Jul">Jul</option>
+            <option value="Aug">Aug</option>
+            <option value="Sep">Sep</option>
+            <option value="Oct">Oct</option>
+            <option value="Nov">Nov</option>
+            <option value="Dec">Dec</option>
+        </select>
+      <br> <br>
+
+      <input type="text" placeholder ="Year" name="year">
+
+      <br>
+      <form>
+
+        <!-- <input type="submit" value="Submit Here" name="Submit"> -->
     </form>
 
-
-
+      <br>
     <form action="script.js" method="confirm">
 
     <p> Are you male or female?</p>
