--- a/index.html
+++ b/index.html
@@ -14,81 +14,26 @@
         <img src="ghana.jpg" alt="ghana flag">
     <h1>Ghanian Birthday Calculator</h1>
        </div> 
-      <p> Select you Birthdate</p>
-    <form action="script.js" method="prompt">
-        <select name="date">
-            <option value="none">-</option>
-            <option value="one">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">14</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-            <option value="21">21</option>
-            <option value="22">22</option>
-            <option value="23">23</option>
-            <option value="24">24</option>
-            <option value="25">25</option>
-            <option value="26">26</option>
-            <option value="27">27</option>
-            <option value="28">28</option>
-            <option value="29">29</option>
-            <option value="30">30</option>
-            <option value="31">31</option>
-        </select>
-        <br>
-        <p> Select your Month</p>
+       <form>
+        <label for="birthday">
+            <p>Please enter your date of birth:</p>
+            <input type="date" name="birthday" id="birthday" />
+        </label> 
+        <br> <br>
+            <p>Please enter your gender:</p>
+            <input type="radio" id="female" value="Female" name="gender"> 
+            <label for="female">Female</label> <br>
+            <input type="radio" id="male" value="male" name="gender">
+            <label for="male">Male</label> <br>
+            <input type="radio" id="other" value="other" name="gender">
+            <label for="other">Other</label>
+            
+            <br> 
 
-        <select name="month">
-            <option value="-">-</option>
-            <option value="Jan">Jan</option>
-            <option value="Feb">Feb</option>
-            <option value="Mar">Mar</option>
-            <option value="Apr">Apr</option>
-            <option value="May">May</option>
-            <option value="Jun">Jun</option>
-            <option value="Jul">Jul</option>
-            <option value="Aug">Aug</option>
-            <option value="Sep">Sep</option>
-            <option value="Oct">Oct</option>
-            <option value="Nov">Nov</option>
-            <option value="Dec">Dec</option>
-        </select>
-      <br> <br>
-
-      <input type="text" placeholder ="Year" name="year">
-
-      <br>
-      <form>
-
-        <!-- <input type="submit" value="Submit Here" name="Submit"> -->
+            <label>
+                <input type="submit" name="Submit" value="Submit">
+            </label>
     </form>
-
-      <br>
-    <form action="script.js" method="confirm">
-
-    <p> Are you male or female?</p>
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female"> FEMALE</label> <br>
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male"> MALE</label> <br> <br>
-        <input type="submit"  value= "Submit here" name="submit">
-     </form>
-    
     </div>
 
     <script 
