added wikipedia link

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
     <div class="container">
        <div class="logo"> 
         <img src="ghana.jpg" alt="ghana flag">
-    <h1>Ghanian Birthday Calculator</h1>
+    <h1>Akan Birthday Calculator</h1>
        </div> 
-       <form>
+       <p>Find out your Akan name Right Here! I'm sure you are wondering what an Akan Name is.
+           In the <strong>Ghanian</strong> culture and traditions, children are given this unique names according to the day they were born. 
+           Each and every day of the week has its own unique name. And yes! You guessed it right, this goes with Gender too. Lets try yours:
+       </p>
+
+       <form action="script">
         <label for="birthday">
             <p>Please enter your date of birth:</p>
             <input type="date" name="birthday" id="birthday" />
         </label> 
         <br> <br>
+
             <p>Please enter your gender:</p>
             <input type="radio" id="female" value="Female" name="gender"> 
             <label for="female">Female</label> <br>
@@ -33,6 +39,13 @@
             <label>
                 <input type="submit" name="Submit" value="Submit">
             </label>
+
+            <br> <br>
+            <footer>
+            <small>
+                <p>Want to learn more about this interesting culture? <a href="https://en.wikipedia.org/wiki/Akan_names">Click here</a></p>
+            </small>
+        </footer>
     </form>
     </div>
 
