--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body> 
     <div class="container">
        <div class="logo"> 
-        <img src="ghana.jpg" alt="ghana flag">
+        <img id="img1" src="ghana.jpg" alt="ghana flag">
+        <img id="img2" src="ghana.jpg" alt="ghana flag">
     <h1>Akan Birthday Calculator</h1>
        </div> 
        <p>Find out your Akan name Right Here! I'm sure you are wondering what an Akan Name is.
@@ -22,12 +23,12 @@
        <form action="script">
         <label for="birthday">
             <p>Please enter your date of birth:</p>
-            <input type="date" name="birthday" id="birthday" />
+            <input type="date" name="birthday" id="birthday" required />
         </label> 
         <br> <br>
 
             <p>Please enter your gender:</p>
-            <input type="radio" id="female" value="Female" name="gender"> 
+            <input type="radio" id="female" value="Female" name="gender" required> 
             <label for="female">Female</label> <br>
             <input type="radio" id="male" value="male" name="gender">
             <label for="male">Male</label> <br>
