--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
            Each and every day of the week has its own unique name. And yes! You guessed it right, this goes with Gender too. Lets try yours:
        </p>
 
-       <form action="script">
+       <form action="script.js">
         <label for="birthday">
             <p>Please enter your date of birth:</p>
-            <input type="date" name="birthday" id="birthday" required />
+            <input type="date" name="birthday" id="DOB" required />
         </label> 
         <br> <br>
 
@@ -36,21 +36,19 @@
             <label for="other">Other</label>
             
             <br> 
+            <input type="submit" />
 
-            <label>
-                <input type="submit" name="Submit" value="Submit">
-            </label>
             <br> <br>
             <footer>
             <small>
                 <p>Want to learn more about this interesting culture? <a href="https://en.wikipedia.org/wiki/Akan_names">Click here</a></p>
             </small>
         </footer>
+        <p id="result"></p>
     </form>
     </div>
 
     <script 
-    src="script.js">
-    </script>
+    src="script.js"></script>
 </body>
 </html>
