changed quotation marks

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            Each and every day of the week has its own unique name. And yes! You guessed it right, this goes with Gender too. Lets try yours:
        </p>
 
-       <form action="script.js" >
+       <form id="form" >
         <label for="birthday">
             <p>Please enter your date of birth:</p>
             <input type="date" name="birthday" id="DOB" required />
@@ -28,6 +28,7 @@
         <br> <br>
 
             <p>Please enter your gender:</p>
+            
             <input type="radio" id="female" value="Female" name="gender" required> 
             <label for="female">Female</label> <br>
             <input type="radio" id="male" value="male" name="gender">
@@ -45,7 +46,6 @@
             </small>
         </footer>
         <p id="result"></p>
-//result changesgit 
     </form>
     </div>
 
