--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
            Each and every day of the week has its own unique name. And yes! You guessed it right, this goes with Gender too. Lets try yours:
        </p>
 
-       <form id="form" >
+       <form id="form">
         <label for="birthday">
             <p>Please enter your date of birth:</p>
-            <input type="date" name="birthday" id="DOB" required />
+            <input type="date" name="birthday" id="DOB" required>
         </label> 
         <br> <br>
 
             <p>Please enter your gender:</p>
-            
+
             <input type="radio" id="female" value="Female" name="gender" required> 
             <label for="female">Female</label> <br>
             <input type="radio" id="male" value="male" name="gender">
