--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <label for="female">Female</label> <br>
             <input type="radio" id="male" value="male" name="gender">
             <label for="male">Male</label> <br>
-            <input type="radio" id="other" value="other" name="gender">
-            <label for="other">Other</label>
+            <!-- the required method is used to make it mandatory for you to fill in the provided spaces -->
             
             <br> 
             <input type="submit" />
